--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Phaser Game</title>
+    <link rel="stylesheet" href="game.css">
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.14.0/dist/phaser.min.js"></script>
-    <script src="game.js"></script>
+    <script src="game.js" defer></script>
   </head>
   <body>
-    <div id="game"></div>
-        <p>Use the arrow keys to move around and collect the coins.</p>
+    <div id="game">
+        <h3>Use the arrow keys to move around and collect the ring.</h3>
+      </div>
   </body>
 </html>
