--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="game.js" defer></script>
   </head>
   <body>
-    <div id="game">
-        <h3>Use the arrow keys to move around and collect the ring.</h3>
-      </div>
+    <div class="game-container">
+      <h3 class="game-instructions">Use the arrow keys to move around and collect the ring.</h3>
+      <div id="game"></div>
   </body>
 </html>
